--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -339,5 +339,18 @@
     color: var(--color-red);
     line-height: 1.3;
     word-wrap: break-word;
+    cursor: pointer;
     
+    &.truncated {
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
+    &:hover {
+        color: var(--color-red-hover);
+    }
 }
